<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.0</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.zapiszto</groupId>
	<artifactId>zapiszTo</artifactId>
	<version>6.9.6-SNAPSHOT</version>
	<name>zapiszTo</name>
	<description>SpringBoot, SpringSecurity, PostgreSQL: JWT_Authentication &amp; Authorization</description>

	<properties>
		<java.version>17</java.version>
	</properties>


	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.11.5</version>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.11.5</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.11.5</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>io.sentry</groupId>
				<artifactId>sentry-maven-plugin</artifactId>
				<version>0.0.8</version>
				<extensions>true</extensions>
				<configuration>
					<!-- for showing output of sentry-cli -->
					<debugSentryCli>true</debugSentryCli>
					<org>smykalm</org>
					<project>zapiszto</project>
					<!-- in case you're self hosting, provide the URL here -->
					<!-- <url>http://localhost:8080/</url>-->
					<!-- provide your auth token via SENTRY_AUTH_TOKEN environment variable -->
					<!-- <authToken>${env.SENTRY_AUTH_TOKEN}</authToken>-->
					<authToken>"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"</authToken>
				</configuration>
				<executions>
					<execution>
						<goals>
							<!--
                            Generates a JVM (Java, Kotlin, etc.) source bundle and uploads your source code to Sentry.
                            This enables source context, allowing you to see your source
                            code as part of your stack traces in Sentry.
                            -->
							<goal>uploadSourceBundle</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
